<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/education1_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Choosing a Sheridan Program"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/education1_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/educ_string1"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/education2_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Further Education Pathways at Sheridan"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/education2_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/educ_string2"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/education3_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Further Education Outside Sheridan"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/education3_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/educ_string3"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/education4_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Talk to a Career Counselor"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/education4_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/educ_string4"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

    </LinearLayout>
</ScrollView>