<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/career_quicktips_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Career QuickTips"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/career_quicktips_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/quicktips_first_text"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/career_cruising_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Career Cruising"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/career_cruising_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/cruising_first_text"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/micro_course_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Career Planning Micro-Course"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/micro_course_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/microcourse_first_text"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/talkCounselor_boldtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="Talk to a Career Counselor"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/talkCounselor_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_card_body"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/talkCounselor_first_text"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="15dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</ScrollView>